oracle-arm/wordpress-sologemma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress-sologemma
  labels:
    app: wordpress
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
